@@ -1,3 +1,13 @@
+Mon May  5 01:06:56 BST 2008  Colin Watson  <cjwatson@debian.org>
+
+	Clean up some loose ends of Chinese support (Debian bug #354321).
+
+	* src/encodings.c (directory_table): Add zh_SG, defaulting to the
+	  GBK encoding.
+	  (charset_alias_table): Map EUCTW to EUC-TW.
+	  (charset_table): Add EUC-TW, defaulting to the nippon driver.
+	  (compatible_encodings): Recognise EUC-TW encoding.
+
 Mon May  5 00:05:19 BST 2008  Colin Watson  <cjwatson@debian.org>
 
 	* gnulib: Upgrade to 20080501.
